set fixed taxes and delivery costs
